[shell-release]release version 3.1.0