@@ -1,7 +1,12 @@
 package com.zrlog.blog.web.util;
 
+import com.hibegin.common.util.StringUtils;
+import com.hibegin.http.HttpMethod;
+import com.hibegin.http.server.ApplicationContext;
 import com.hibegin.http.server.api.HttpRequest;
 import com.hibegin.http.server.api.HttpResponse;
+import com.hibegin.http.server.config.RequestConfig;
+import com.hibegin.http.server.util.HttpRequestBuilder;
 import com.zrlog.common.Constants;
 import com.zrlog.common.exception.AdminAuthException;
 import com.zrlog.util.ZrLogUtil;
@@ -24,31 +29,24 @@ public class WebTools {
         if (ZrLogUtil.isBae() && request.getHeader("clientip") != null) {
             ip = request.getHeader("clientip");
         }
-        if (ip == null || ip.length() == 0) {
+        if (ip == null || ip.isEmpty()) {
             ip = request.getHeader("X-forwarded-for");
         }
-        if (ip == null || ip.length() == 0 || "unknown".equalsIgnoreCase(ip)) {
+        if (ip == null || ip.isEmpty() || "unknown".equalsIgnoreCase(ip)) {
             ip = request.getHeader("X-Real-IP");
         }
-        if (ip == null || ip.length() == 0 || "unknown".equalsIgnoreCase(ip)) {
+        if (ip == null || ip.isEmpty() || "unknown".equalsIgnoreCase(ip)) {
             ip = request.getHeader("Proxy-Client-IP");
         }
-        if (ip == null || ip.length() == 0 || "unknown".equalsIgnoreCase(ip)) {
+        if (ip == null || ip.isEmpty() || "unknown".equalsIgnoreCase(ip)) {
             ip = request.getHeader("WL-Proxy-Client-IP");
         }
-        if (ip == null || ip.length() == 0 || "unknown".equalsIgnoreCase(ip)) {
+        if (ip == null || ip.isEmpty() || "unknown".equalsIgnoreCase(ip)) {
             ip = request.getRemoteHost();
         }
         return ip;
     }
 
-    public static String getHomeUrlWithHost(HttpRequest request) {
-        return "//" + request.getHeader("host") + "/";
-    }
-
-    public static String getHomeUrlWithHostNotProtocol(HttpRequest request) {
-        return request.getHeader("host") + "/";
-    }
 
     public static String getHomeUrl(HttpRequest request) {
         return "/";
@@ -112,7 +110,7 @@ public class WebTools {
         } else {
             try {
                 String url = Constants.ADMIN_LOGIN_URI_PATH + "?redirectFrom="
-                        + URLEncoder.encode(getRequestUriWithQueryString(request), "UTF-8");
+                        + URLEncoder.encode(getRequestUriWithQueryString(request), StandardCharsets.UTF_8);
                 response.redirect(url);
             } catch (Exception e) {
                 throw new RuntimeException(e);
@@ -125,6 +123,44 @@ public class WebTools {
         if (request.getUri().endsWith(Constants.ADMIN_URI_BASE_PATH)) {
             realUri = realUri + Constants.INDEX_URI_PATH;
         }
-        return realUri + (request.getQueryStr() != null ? "?" + request.getQueryStr() : "");
+        if (StringUtils.isEmpty(request.getQueryStr())) {
+            return realUri;
+        }
+        return realUri + "?" + request.getQueryStr();
     }
+
+    public static String encodeUrl(String path) {
+        StringBuilder encoded = new StringBuilder();
+        for (char c : path.toCharArray()) {
+            if (isUnsafeCharacter(c)) {
+                encoded.append(URLEncoder.encode(String.valueOf(c), StandardCharsets.UTF_8));
+            } else {
+                encoded.append(c);
+            }
+        }
+        return encoded.toString();
+    }
+
+    private static boolean isUnsafeCharacter(char c) {
+        // 检查字符是否为需要编码的字符，保留保留字符和子分隔符
+        return !(isUnreservedCharacter(c) || isReservedCharacter(c));
+    }
+
+    private static boolean isUnreservedCharacter(char c) {
+        // 不需要编码的普通字符：字母、数字、- . _ ~
+        return (c >= 'a' && c <= 'z') ||
+                (c >= 'A' && c <= 'Z') ||
+                (c >= '0' && c <= '9') ||
+                c == '-' || c == '.' || c == '_' || c == '~';
+    }
+
+    private static boolean isReservedCharacter(char c) {
+        // 保留字符和子分隔符
+        return ":/?#[]@!$&'()*+,;=".indexOf(c) != -1;
+    }
+
+    public static HttpRequest buildMockRequest(HttpMethod method, String uri, RequestConfig requestConfig, ApplicationContext applicationContext) throws Exception {
+        return HttpRequestBuilder.buildRequest(method, uri, ZrLogUtil.getBlogHostByWebSite(), ZrLogUtil.STATIC_USER_AGENT, requestConfig, applicationContext);
+    }
+
 }
